# fleetctrl-client

./: .gitignore  MakeFile  README.MD  app.syso  go.mod  go.sum
.github/workflows/: build-release.yml
cmd/internal/auth/: auth.go  helpers.go  http_middleware.go
cmd/internal/const/: consts.go
cmd/internal/utils/: http.go  utils.go
cmd/main/: firewall.go  main.go  registery.go  service.go
installer/: installer.wxs  license.rtf
internal/apps/: detection.go  helpers.go  helpers_test.go  install_scripts.go  install_scripts_test.go  management.go  requirements.go  state.go
internal/auth/: auth.go  helpers.go  helpers_test.go  http_middleware.go  time_skew.go
internal/const/: consts.go
internal/database/: database.go
internal/manager/: manager.go
internal/models/: models.go
internal/registry/: registry.go
internal/service/: service.go
internal/updater/: updater.go
internal/utils/: computer.go  http.go  intune.go  logger.go  rustdesk.go  utils.go  utils_test.go
rust-client/: COMPATIBILITY.md  Cargo.toml
rust-client/fixtures/: cli-install.args  cli-remove.args  dpop-claims.json  server-url-input.txt  server-url-output.txt  x-client-update.json
rust-client/fleetctrl-client/: Cargo.toml
rust-client/fleetctrl-client/src/: main.rs
rust-client/fleetctrl-core/: Cargo.toml
rust-client/fleetctrl-core/src/: auth.rs  config.rs  constants.rs  dpop.rs  install.rs  lib.rs  models.rs  service.rs  traits.rs  update.rs
rust-client/fleetctrl-win/: Cargo.toml
rust-client/fleetctrl-win/src/: lib.rs  process.rs  registry.rs  secrets.rs  service_control.rs  system.rs
utils/: http.go  rustdesk.go  utils.go
