[workspace]
members = [
    "fleetctrl-core",
    "fleetctrl-win",
    "fleetctrl-client",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "2.0.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
httpdate = "1.0"
p256 = { version = "0.13", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4"] }
wait-timeout = "0.2"
