[package]
name = "fleetctrl-win"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
fleetctrl-core = { path = "../fleetctrl-core" }
tokio.workspace = true
tracing.workspace = true
wait-timeout.workspace = true

[target.'cfg(windows)'.dependencies]
windows-dpapi = "0.2"
windows-service = "0.8"
winreg = "0.56"
